# SimpleTowerDefense

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  gen-cmake.bat
assets/: basic.frag  basic.vert
simpletdengine/: CMakeLists.txt
simpletdengine/include/simpletdengine/: defines.h  game.h
simpletdengine/include/simpletdengine/filesystem/: file_utils.h
simpletdengine/include/simpletdengine/rendering/: buffer.h  buffer_layout.h  graphics_api.h  index_buffer.h  layout_element.h  renderer.h  shader.h  vertex_array.h  vertex_buffer.h
simpletdengine/include/simpletdengine/rendering/opengl/: opengl_buffer.h  opengl_graphics_api.h  opengl_index_buffer.h  opengl_shader.h  opengl_utils.h  opengl_vertex_array.h  opengl_vertex_buffer.h
simpletdengine/include/simpletdengine/windowing/: window.h
simpletdengine/include/simpletdengine/windowing/impl/: sdl_window.h
simpletdengine/src/: game.cpp
simpletdengine/src/filesystem/: file_utils.cpp
simpletdengine/src/rendering/: buffer.cpp  buffer_layout.cpp  index_buffer.cpp  layout_element.cpp  renderer.cpp  vertex_array.cpp  vertex_buffer.cpp
simpletdengine/src/rendering/opengl/: opengl_buffer.cpp  opengl_graphics_api.cpp  opengl_index_buffer.cpp  opengl_shader.cpp  opengl_utils.cpp  opengl_vertex_array.cpp  opengl_vertex_buffer.cpp
simpletdengine/src/windowing/: window.cpp
simpletdengine/src/windowing/impl/: sdl_window.cpp
simpletdgame/: CMakeLists.txt
simpletdgame/include/simpletdgame/: simpletdgame.h
simpletdgame/src/: main.cpp  simpletdgame.cpp
